<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">家庭理财</string>
    <string name="login">用户登陆</string>
    <string name="Reges">用户注册</string>
    <string name="text_psw">密码</string>
    <string name="text_sure">确定</string>
    <string name="text_cancle">取消</string>
    <string name="text_answer">输入答案:</string>
    <string name="text_question">输入问题:</string>
    <string name="text_findpsw_info">只有您输入第一次设置密码问题的正确答案，才能找回您的密码！</string>
    <string name="text_back">返回</string>
    <string name="text_showpwd">找回密码</string>
    <string name="text_regist_info">这是您第一次使用家庭理财系统，请设置您的密码，以保护您的理财信息不被他人查看！</string>
    <string name="text_enter_psw">输入密码:</string>
    <string name="text_enter_again">确认密码:</string>
    <string name="text_enter_question_info">请设置问题和答案，以便在您忘记密码时以回答问题的方式找回密码！</string>
    <string name="text_title_regist">设置密码</string>
    <string name="text_title_login">欢迎使用家庭理财</string>
    <string name="text_enter">进入</string>
    <string name="text_forget_psw">忘记密码  |  请点击我</string>
    <string name="text_today_pay">今日消费:</string>
    <string name="text_thisweek_pay">本周消费:</string>
    <string name="text_thismonth_pay">本月消费:</string>
    <string name="text_psw_manege">密码管理</string>
    <string name="text_reset">重设密码</string>
    <string name="text_clear_psw">清空密码</string>
    <string name="text_oneincome_oneincom">收入一笔</string>
    <string name="text_choose">选择</string>
    <string name="text_whataccount">计入账户:</string>
    <string name="text_account">请选择账户</string>
    <string name="text_remark">备注:</string>
    <string name="text_remarktime">记账时间:</string>
    <string name="text_oneincome_selecttime">请选择时间</string>
    <string name="text_onepay_onepay">支出一笔:</string>
    <string name="text_payone_type">支出类型:</string>
    <string name="text_onepay_whataccount">支出账户:</string>
    <string name="text_oneother_other">其他支出:</string>
    <string name="text_setup_set">设置</string>
    <string name="text_about_name">姓名: 钟人站</string>
    <string name="text_about_sex">性别: 男</string>
    <string name="text_about_specialityr">特长: Android开发</string>
    <string name="text_about_about_author">关于作者</string>
    <string name="text_about_software">关于Linko理财</string>
    <string name="text_about_softwareinfo">庭理财系统是本人的毕业设计作品本系统是一款简单实用的理财软件，能够满足个人的理财需求，记录日常收支明细，可以进行收支查询和账户资金查询，使用户对自己的财务有一个清晰的认识，便于财务管理。</string>
    <string name="lisence">"Linko理财是一款完全免费的个人理财软件。功能覆盖记账、固定收支、财务短信、聚合统计、账户管理等实用功能。本着为用户提供方便、实用的个人理财功能而研发，软件所有功能完全免费。

开发者将尽可能的为用户提供方便功能，但因部分极特殊且不可抗拒的情况下，可能对用户造成一定影响，特此声明：

 一、对于刷机、重置系统没有按步骤及时备份数据，造成用户数据丢失的情况，超级理财不承担任何责任。

 二、对于SD卡意外损坏、手机丢失等不可抗拒因素所引起的用户数据丢失，超级理财不承担任何责任。

 三、对于将超级理财安装到SD卡上（系统默认不允许安装到SD卡），造成部分功能不能正常使用，Linko理财不承担任何责任。

 四、本软件为彩民提供了快捷的购彩入口，购彩过程中由于网络环境等因素引起的问题，本软件不承担任何责任。

 五、Linko理财提供的汇率查询的结果来自互联网，不对此结果承担任何责任。

 以上免责声明最终解释权归超级理财软件开发者钟人站所有。"</string>
    <string name="text_title_findpsw">找回密码</string>
    <string name="text_psw_protect">保护设置</string>
    <string name="text_open_protect">开启保护</string>
    <string name="text_close_protect">关闭保护</string>
    <string name="text_add">添加</string>
    <string name="text_delete">删除</string>
    <string name="text_category_addone">添加类别</string>
    <string name="text_currency">货币种类:</string>
    <string name="text_choose_currence">请选择货币类型</string>
    <string name="text_account_addone">添加账户</string>
    <string name="text_account_balanceinfo">账户信息</string>
    <string name="text_account_edit">编辑</string>
    <string name="text_data_manage">数据管理</string>
    <string name="search_condition">查询条件</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="maximum_amount">最大金额：</string>
    <string name="minimum_amount">最小金额：</string>
    <string name="pay_income_type">收支类型：</string>
    <string name="text_account_search">账目查询</string>
    <string name="text_search">查询</string>
    <string name="text_search_accunt_choose">选择账户：</string>
    <string name="text_search_please_choose_account">请选择要查询的账户</string>
    <string name="text_pay_income_info_list">收支详细列表</string>
    <string name="text_title_income_type">收入类型</string>
    <string name="text_paycategory_list">支出类型</string>
    <string name="text_Feedbackt">意见反馈</string>
    <string name="text_Feedbackt_content">输入您要反馈的内容</string>
    <string name="text_email_content">邮件内容</string>
    <string name="text_email_address">邮件地址</string>
    <string name="text_email_addres">您的邮箱地址</string>
    <string name="text_send">发送</string>
    <string name="app_name">Linko</string>
    <string name="warm_enter_right_psw">请输入正确的信息</string>
    <string name="warm_set_psw_success">设置成功！</string>
    <string name="warm_psw_disaccord">两次密码一致！</string>
    <string name="warm_psw_wrong_psw">密码错误！</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gridview_item_name">名字</string>
    <string name="shortcut_name">Linko</string>
    <string name="enter_type">请输入记账类别</string>
    <string name="pleass_enter_complete_information">请输入完整的信息！！</string>
    <string name="record_success">记录成功！</string>
    <string name="text_income_type_title">收入类型：</string>
    <string name="text_pay_type_title">支出类型：</string>
    <string name="text_email_no_content">您还没有写下建议呢！</string>
    <string name="text_email_thanks">感谢您的建议！</string>

    <string-array name="income_categoryname">
        <item>工资</item>
        <item>基金</item>
        <item>分红</item>
        <item>利息</item>
        <item>补贴</item>
        <item>奖金</item>
        <item>提成</item>
        <item>基金</item>
    </string-array>
    <string-array name="pay_category">
        <item>话费</item>
        <item>人情往来</item>
        <item>休闲娱乐</item>
        <item>交通费用</item>
        <item>衣服</item>
        <item>日用品</item>
    </string-array>
    <string-array name="account">
        <item>现金</item>
        <item>存款</item>
        <item>信用卡</item>
        <item>支付宝</item>
    </string-array>
    <string-array name="sign">
        <item>CNY</item>
        <item>USD</item>
        <item>HKD</item>
        <item>MOP</item>
        <item>TWD</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>EUR</item>
        <item>PHP</item>
    </string-array>
    <string-array name="currency">
        <item>人民币</item>
        <item>美元</item>
        <item>港元</item>
        <item>澳元</item>
        <item>新台币</item>
        <item>日元</item>
        <item>韩元</item>
        <item>欧元</item>
        <item>菲律宾索</item>
    </string-array>
    <string-array name="financing_gridview_names">
        <item>收入一笔</item>
        <item>支出一笔</item>
        <item>记账类别</item>
        <item>帐目统计</item>
        <item>统计图表</item>
        <item>用户管理</item>
        <item>密码管理</item>
        <item>数据备份</item>
        <item>帐目查询</item>
    </string-array>
    <string-array name="gridview_names">
        <item>理财</item>
        <item>安全</item>
        <item>读书</item>
        <item>网盘</item>
        <item>笔记</item>
        <item>豆瓣</item>
        <item>新闻</item>
        <item>彩票</item>
        <item>音乐</item>
    </string-array>

    <string name="enter_item_name">请输入名字</string>
    <string name="confirm_quit_title">提示！</string>
    <string name="confirm_quit_message">你是否要退出Linko？</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="header_category_set">类别设置</string>
    <string name="lock_settings_title">密码状态</string>
    <string name="header_category_prefer">偏好设置</string>
    <string name="header_category_other">理财相关</string>
    <string name="income_settings_title">收入类型管理</string>
    <string name="payoutcategory_settings_title">支出类型管理</string>
    <string name="account_settings_title">账户类型管理</string>
    <string name="about_author_title">关于作者</string>
    <string name="send_email_settings_title">意见反馈</string>
    <string name="help_explanation_title">帮助说明</string>
    <string name="psw_protect_state_title">密码保护状态</string>
    <string name="warm_user_record_title">记账时间提醒</string>
    <string name="text_enter_email">输入您的邮箱</string>
    <string name="applications_settings_header">应用</string>
    <string name="manageapplications_settings_title">应用管理</string>
    <string name="process_management_title">进程管理</string>
    <string name="auto_launch_title">自启动应用</string>
    <string name="user_applications">个人应用</string>
    <string name="system_applications">系统应用</string>
    <string name="autostart_user_hint_info">取消勾选可以禁止程序自启动</string>
    <string name="autostart_system_hint_info">系统应用，不建议禁止</string>
    <string name="autostart_state_disabled">状态:已禁止</string>
    <string name="autostart_state_abled">状态:自启动</string>
    <string name="no_applications">无应用</string>
    <string name="settings_safetylegal_activity_loading">正在加载。。。</string>

</resources>