<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_background"
    android:orientation="vertical" >

    <!-- titlebar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:background="@drawable/ic_titlebar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/text_Feedbackt"
            android:textColor="#ffffff"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/text_thank"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/id_et_email_content"
            android:layout_width="match_parent"
            android:layout_height="150dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:gravity="left|top"
            android:hint="@string/text_email_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ic_boot"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/id_bt_send"
                android:layout_width="70dip"
                android:layout_height="35dip"
                android:background="@drawable/btn_style"
                android:text="@string/text_send"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_back"
                android:layout_width="70dip"
                android:layout_height="35dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:background="@drawable/btn_style"
                android:text="@string/text_back"
                android:textSize="18sp" />
        </LinearLayout>
        </RelativeLayout>

        
    </LinearLayout>

</LinearLayout>