<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/ic_titlebar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/text_paycategory_list"
            android:textColor="#ffffff"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="374dip"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lv_categorylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:background="@drawable/ic_main_background"
            android:dividerHeight="1dip"
            android:divider="@drawable/ic_line" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_boot"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >
         <Button
            android:id="@+id/bt_categorylist_add"
           android:layout_width="70dip"
            android:layout_height="35dip"
            android:background="@drawable/btn_style"
            android:textSize="18sp"
           
            android:text="@string/text_add" />

        <Button
            android:id="@+id/bt_back"
            android:layout_width="70dip"
            android:layout_height="35dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/btn_style"
             android:layout_marginLeft="20dip"
            android:textSize="18sp"
            android:text="@string/text_back" />


       
    </LinearLayout>

</LinearLayout>